ipynb and csv for demo of quakes

--- a/sample-notebooks/earthquakes.ipynb
+++ b/sample-notebooks/earthquakes.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -38,10 +38,10 @@
     {
      "data": {
       "text/plain": [
-       "110171"
+       "999"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
        "4  earthquake  0101000020AD100000A54E4013618B58C07F6ABC749360...    Oklahoma  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,15 +188,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "DOC:  If dropna() implementation is right, this should produce 485"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -204,10 +197,10 @@
     {
      "data": {
       "text/plain": [
-       "40000"
+       "485"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,6 +208,13 @@
    "source": [
     "us_quakes = all_quakes.dropna(subset=[\"state\"])\n",
     "len(us_quakes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count number of earthquakes per state"
    ]
   },
   {
@@ -275,7 +275,6 @@
     }
    ],
    "source": [
-    "#state_counts = us_quakes.state.value_counts()\n",
     "state_counts = pd.DataFrame(us_quakes.state.value_counts())\n",
     "state_counts.head()"
    ]
