--- a/sample-notebooks/starter.ipynb
+++ b/sample-notebooks/starter.ipynb
@@ -1,1 +1,187 @@
-{"cells":[{"cell_type":"markdown","metadata":{},"source":["# Welcome to Livebook\n","\n","This is an iPython notebook that runs in your browser. Try out some live coding by editing the cell below."]},{"cell_type":"code","execution_count":6,"metadata":{"collapsed":false},"outputs":[{"data":{"text/plain":["live coding is fun! live coding is fun! "]},"execution_count":1,"metadata":{},"output_type":"execute_result"}],"source":["\"live coding is fun! \" * 2\n"]},{"cell_type":"markdown","metadata":{},"source":["Load data from the embedded CSV (filename doesn't matter):\n"]},{"cell_type":"code","execution_count":null,"metadata":{"collapsed":false},"outputs":[{"data":{"text/plain":[null]},"execution_count":1,"metadata":{},"output_type":"execute_result"}],"source":["import pandas as pd\n","data = pd.read_csv('starter.csv')\n","data\n"]},{"cell_type":"code","execution_count":1,"metadata":{"collapsed":false},"outputs":[{"data":{"text/plain":[null]},"execution_count":1,"metadata":{},"output_type":"execute_result"}],"source":["import matplotlib.pyplot as plt\n","plt.figure(figsize=(10, 8))\n","plt.plot(data.x, data.y, '#0a7')\n"]},{"cell_type":"markdown","metadata":{},"source":["The CSV is embedded in the document, so you can use any filename to load it.\n","\n","Have fun,\n","\n","— The Livebook team"]}],"metadata":{"kernelspec":{"display_name":"Python 2","language":"python","name":"python2"},"language_info":{"codemirror_mode":{"name":"ipython","version":2},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython2","version":"2.7.9"}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Welcome to Livebook\n",
+    "\n",
+    "This is an iPython notebook that runs in your browser. Try out some live coding by editing the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'live coding is fun! live coding is fun! '"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"live coding is fun! \" * 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load data from the embedded CSV (filename doesn't matter):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>color</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x  y  color\n",
+       "0  1  3    red\n",
+       "1  7  2   blue\n",
+       "2  4  3  green"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('starter.csv')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And plot!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x10f190190>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.scatter(data.x, data.y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keyboard navigation\n",
+    "\n",
+    "Use the arrow keys to move your cursor (the colored bar in the left margin) up and down. Then:\n",
+    "\n",
+    "* **Enter** to edit a cell\n",
+    "* **Esc** to leave a cell edit\n",
+    "* **c** to open a new code cell\n",
+    "* **m** to open a new prose (Markdown) cell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Realtime collaboration\n",
+    "\n",
+    "Invite colleagues or friends to view your notebook by sending them the URL from your web browser. They'll appear as an avatar in the right column. Click on your avatar to change your name.'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have fun,\n",
+    "\n",
+    "— The Livebook team"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
