some notebook changes

--- a/sample-notebooks/earthquakes.ipynb
+++ b/sample-notebooks/earthquakes.ipynb
@@ -426,11 +426,11 @@
     "def quake_percentage_change(state):\n",
     "    by_year = pd.DataFrame(us_quakes[us_quakes[\"state\"] == state].set_index(\"time\")[\"id\"].resample(\"AS\", how=\"count\"))\n",
     "    by_year[\"start\"] = by_year.index\n",
-    "    by_year[\"year\"] = by_year[\"start\"].apply(lambda x: x.year)\n",
+    "    by_year[\"year\"] = by_year[\"start\"].apply(lambda x: int(x[0:4]))\n",
     "    decade_05_14 = by_year[(by_year[\"year\"] >= 2005) & (by_year[\"year\"] <= 2014)]\n",
-    "    total_05_14 = decade_05_14[\"id\"].sum()\n",
+    "    total_05_14 = decade_05_14[\"count\"].sum()\n",
     "    decade_95_04 = by_year[(by_year[\"year\"] >= 1995) & (by_year[\"year\"] <= 2004)]\n",
-    "    total_95_04 = decade_95_04[\"id\"].sum()\n",
+    "    total_95_04 = decade_95_04[\"count\"].sum()\n",
     "    if total_95_04 != 0:\n",
     "        pct = round(100.0 * (total_05_14 - total_95_04) / total_95_04, 2)\n",
     "    else:\n",
