iPython is iNcorrect

--- a/sample-notebooks/starter.ipynb
+++ b/sample-notebooks/starter.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Welcome to Livebook\n",
     "\n",
-    "This is an iPython notebook that runs in your browser. Try out some live coding by editing the cell below."
+    "This is an IPython notebook that runs in your browser. Try out some live coding by editing the cell below."
    ]
   },
   {
