Fixing typos in montecarlo ;)

--- a/sample-notebooks/montecarlo.ipynb
+++ b/sample-notebooks/montecarlo.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# Statistics made simple through simulation\n",
     "\n",
-    "## The 5 Step Modeling Approach\n",
+    "## The 5 Step Modelling Approach\n",
     "\n",
     "1. Ask the question\n",
-    "2. Select the modeling approach\n",
+    "2. Select the modelling approach\n",
     "3. Formulate the model\n",
     "4. Solve the model\n",
     "5. Answer the question\n",
@@ -18,7 +18,7 @@
     "## Monte Carlo Simulation\n",
     "\n",
     "Pros\n",
-    "* General method that can give approximate solutions to any probability modeling problem. (Mathematical Modeling, Meerschaert)\n",
+    "* General method that can give approximate solutions to any probability modelling problem. (Mathematical Modelling, Meerschaert)\n",
     "* Intuitive models that are fairly straight-forward to grasp without much mathematical formalism.\n",
     "\n",
     "Cons\n",
@@ -27,11 +27,11 @@
     "\n",
     "To the last point while this is true, Meerschaert says:\n",
     "\n",
-    "\"As a practical matter, there are many sources of error and variation in a modeling problem, and the additional variation produced by Monte Carlo simulation is not typically the most serious of these.\"\n",
+    "\"As a practical matter, there are many sources of error and variation in a modelling problem, and the additional variation produced by Monte Carlo simulation is not typically the most serious of these.\"\n",
     "\n",
     "He goes on to say that sensitivity analysis is your friend.\n",
     "\n",
-    "We'll be using this term to be synonomous with Analytical Simulation. The core difference is a pure Monte Carlo simulation works in simplest terms with no higher level mathematical concepts. An analytical simulation may use probability distributions or other mathematical tooling as a shortcut.\n",
+    "We'll be using this term to be synonymous with Analytical Simulation. The core difference is a pure Monte Carlo simulation works in simplest terms with no higher level mathematical concepts. An analytical simulation may use probability distributions or other mathematical tooling as a shortcut.\n",
     "\n",
     "## Enough theory\n",
     "\n",
