remove stand-in links from welcome notebook

--- a/sample-notebooks/welcome.ipynb
+++ b/sample-notebooks/welcome.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Prose editor\n",
     "\n",
-    "Navigate the editor like a regular word processor, select words to bold or create section headers. Click the + in the left margin or press cmd-J to insert a new code cell.\n",
+    "Navigate the editor like a regular word processor, select words to bold or create section headers. Click the + in the left margin or press ⌘-J to insert a new code cell.\n",
     "\n",
     "## CSV data and charts\n",
     "\n",
@@ -149,13 +149,13 @@
     "\n",
     "## Going further\n",
     "\n",
-    "Once you're ready for something more sophisticated, try out the [Earthquakes notebook](#) or the [Monte Carlo simulation notebook](#). Or upload your own .ipynb and .csv.\n",
+    "Once you're ready for something more sophisticated, open the menu in the upper left corner and try out the earthquake or Monte Carlo notebooks.\n",
     "\n",
-    "[More information and full sourcecode available here.](#)\n",
+    "[More information and full sourcecode available here.](https://github.com/inkandswitch/livebook)\n",
     "\n",
     "Have fun!\n",
     "\n",
-    "<3,\n",
+    "❤,\n",
     "Adam, Orion, Brett, Lucia (the Livebook team)\n"
    ]
   }
