credit notebook authors and link originals

--- a/sample-notebooks/earthquakes.ipynb
+++ b/sample-notebooks/earthquakes.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyzing State-by-State Changes In Earthquake Frequency\n"
+    "## Analyzing State-by-State Changes In Earthquake Frequency\n",
+    "\n",
+    "_adapted from [this notebook](https://github.com/BuzzFeedNews/2015-03-earthquake-maps/blob/master/notebooks/earthquake-state-analysis.ipynb) by [John Templon](https://twitter.com/jtemplon)_"
    ]
   },
   {
@@ -614,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
