--- a/sample-notebooks/montecarlo.ipynb
+++ b/sample-notebooks/montecarlo.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Statistics made simple through simulation\n",
     "\n",
+    "_adapted from [this notebook](https://github.com/jcbozonier/PyData2015/blob/master/PyData%20Workshop.ipynb) by [Justin Bozonier](https://twitter.com/databozo)_\n",
+    "\n",
     "## The 5 Step Modelling Approach\n",
     "\n",
     "1. Ask the question\n",
@@ -247,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
