Rm lite csv, substitute with 50k records

--- a/sample-notebooks/earthquakes.ipynb
+++ b/sample-notebooks/earthquakes.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "all_quakes = pd.DataFrame.from_csv(\"earthquake_states_lite.csv\", index_col=None, parse_dates=[\"time\", \"updated\"])\n",
+    "all_quakes = pd.DataFrame.from_csv(\"earthquake_states.csv\", index_col=None, parse_dates=[\"time\", \"updated\"])\n",
     "len(all_quakes)"
    ]
   },
