Correct plot call for welcome plot

--- a/sample-notebooks/welcome.ipynb
+++ b/sample-notebooks/welcome.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -62,42 +62,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>color</th>\n",
+       "      <th>year</th>\n",
+       "      <th>pop_usa</th>\n",
+       "      <th>pop_china</th>\n",
+       "      <th>pop_russia</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>red</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>157813040</td>\n",
+       "      <td>544112923</td>\n",
+       "      <td>102798657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>blue</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>186176524</td>\n",
+       "      <td>644450173</td>\n",
+       "      <td>119860289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>green</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>209485807</td>\n",
+       "      <td>808510713</td>\n",
+       "      <td>130126383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1980</td>\n",
+       "      <td>229588208</td>\n",
+       "      <td>977837433</td>\n",
+       "      <td>138063062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>252847810</td>\n",
+       "      <td>1154605773</td>\n",
+       "      <td>147568552</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   x  y  color\n",
-       "0  1  3    red\n",
-       "1  7  2   blue\n",
-       "2  4  3  green"
+       "   year    pop_usa   pop_china  pop_russia\n",
+       "0  1950  157813040   544112923   102798657\n",
+       "1  1960  186176524   644450173   119860289\n",
+       "2  1970  209485807   808510713   130126383\n",
+       "3  1980  229588208   977837433   138063062\n",
+       "4  1990  252847810  1154605773   147568552"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -125,18 +145,30 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x10ae12510>"
+       "[<matplotlib.lines.Line2D at 0x10714b310>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX0AAAEGCAYAAACJnEVTAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl4VfWdx/H3l33fN0FFUXCJBCsEUVGv1VYUR6vWoM7o\n1GmttpX6TKdWbUEiakqdacfaju2DVdtOx4VWHZdodaqETdGoSAQChIKyGnbZISTf+ePchEtIyA2c\n5Nyb+3k9z3lyll/O/eYSPveX39nM3RERkczQIuoCRESk6Sj0RUQyiEJfRCSDKPRFRDKIQl9EJIMo\n9EVEMkiTh76ZPWFmZWZWnETb483sb2Y238zeNrP+TVGjiEhzFUVP/yng0iTb/gfwe3cfBkwGpjRa\nVSIiGaDJQ9/dZwNbEteZ2SAze93MisxshpkNiW86HZge/75C4KomLVZEpJlJlTH9qcAd7p4D3AX8\nJr7+Y+AaADO7BuhkZt2jKVFEJP21iroAM+sInAv82cwsvrp1/OtdwK/N7BvATGANUNHkRYqINBOR\nhz7BXxtb3P2smhvcfR1wLVR/OFzr7tuauD4RkWaj3uGdZM62MbOYmc0zswVmNj2J17X4hLtvB1aY\n2dcT9pcd/9ozofd/L/BkEvsWEZE6JDOmf9izbcysK/BfwBXufgZw3eF2ZmZPA+8AQ8xspZndAvwj\n8E0z+9jMFgBXxpvHgCVmthjoAzyURL0iIlIHS+bWymY2EHjF3bNr2fYd4Bh3v68R6hMRkRCFcfbO\nEKCHmU2Pn3J5Uwj7FBGRRhDGgdxWwFnAl4GOwLtm9q67Lwth3yIiEqIwQn81sNHd9wB7zGwmMAw4\nJPTNTI/pEhE5Au5u9beqX7LDO9Vn29TiJWC0mbU0sw7A2UBJXTty97SdJk2aFHkNqj/6OjKx/nSu\nvTnUH6Z6e/rxs21iQE8zWwlMAtoE+e1T3X2xmb0BFBNcODXV3ReFWqWIiISi3tB39xuTaPMfBDdH\nExGRFJYq995JC7FYLOoSjorqj1Y615/OtUP61x+mpM7TD+3FzLwpX09EpDkwM7yJD+SKiEgzoNAX\nEckgCn0RkQyi0BcRySAKfRGRDKLQFxHJIAp9EZEMotAXEckgCn0RkQyi0BcRySAKfRGRDKLQFxHJ\nIAp9EZEMotAXEckgCn0RkQyi0BcRySAKfRGRDFJv6JvZE2ZWZmbF9bTLMbNyM7smvPJERCRMyfT0\nnwIuPVwDM2sBTAHeCKMoERFpHPWGvrvPBrbU02w88BdgfRhFiYhI42h1tDsws/7A19z9IjMbGUJN\nIiIZr9IrWbFlBcVlhx1Zb7CjDn3gEeDuhOVQntguIpIpvtjzBZ+s/4T5n8+nuKyY4vXFLFi/gB7t\ne5DdNzvU1woj9EcAz5qZAb2Ay8ys3N1frq1xXl5e9XwsFiMWi4VQgohI6quorGDZ5mUUlxUzvywe\n8GXFbNy1kTP6nEF232yG9R1G1s4s1u5cS7u97WArvMqrodVg7l5/I7MTgFfcfWg97Z6Kt3uhju2e\nzOuJiKS7zbs3V4f6/M/nU7y+mEUbFtGvUz+y+2aT3SebYf2Gkd03m0HdB9HC6j7Eama4eyijKPX2\n9M3saSAG9DSzlcAkoA3g7j61RnMluohklPKKcpZuWnog4OM9+G17twXh3jebnAE5fPOsbzK0z1A6\nt+0cab1J9fRDezH19EUkja3fub463KsCfvHGxRzX5big194nuzroT+h2AsGo99ELs6ev0BcRqWFf\nxT5KNpQcCPj1wRDN3oq91ePuVeGe1TuLjm06Nmo9Cn0RkRC4O+t2rDuo915cVkzp5lJO7HbiIQF/\nbJdjQ+u9N4RCX0Skgfbs38PC9QsP6r0XlxXj7gcNzQzrN4zTep1G+9btoy65mkJfROQwdpXv4uPP\nP6ZoTRFFa4v4aN1HrNi6gsE9Blf32qt68f069Yuk994QCn0RkbjyinIWrF9A0dqi6pBfumkpp/c+\nnRH9R5DTP4fh/YdzWq/TaNuqbdTlHhGFvohkpEqvZOmmpdXhXrS2iOKyYgZ2HUjOgBxG9h9JzoAc\nsvtm065Vu6jLDY1CX0SaPXdn5RcrD+rBf7juQ3q270nOgBxGHDOCnAE5DD9meOTnvjc2hb6INDvr\nd64/qAdftKaIli1aktM/J5gG5DCi/wh6degVdalNTqEvImntiz1f8OG6Dw8K+W17t1WPwVeF/IDO\nA1L+IGtTUOiLSNrYXb47OJMmoQe/ettqzux3ZnW45/TP4aQeJx32/jOZTKEvIimpvKKchRsWHtSD\nX7JxCaf1Pu2gHvzpvU+nVYswbvKbGRT6IhK5Sq+kdFPpQQdai8uKOb7r8dW995z+OQzrN6xZnUkT\nBYW+iDQpd2fVtlUH9eA/XPsh3dt3P6gHf9YxZ9GlbZeoy212FPoi0uj2V+7n7RVvM23hNApKC3D3\ng3rwI/qPoHfH3lGXmREU+iLSKPZX7mfGpzOYtnAaLyx+gZO6n0RuVi5Xn3p1qLcKloZp0oeoiEjz\nVlFZwczPZlYH/fFdjyf39FyKbi3ihG4nRF2ehEyhL5KBKiormLNqDs8teI7nS55nQJcB5J6ey7vf\nfJdB3QdFXZ40IoW+SIao9EreWfUO0xZO4y+L/kKfjn3Izcpl1i2zGNxzcNTlSRNR6Is0Y5VeydzV\nc5m2cBp/XvRnerbvSW5WLtP/eTqn9Dol6vIkAsk8GP0J4AqgzN2za9l+I3B3fHE78B13/yTUKkUk\nae7O+2verw76Tm06MS5rHH+76W+c1vu0qMuTiNV79o6ZjQZ2AH+sI/RHASXu/oWZjQHy3H1UHfvS\n2TsijcDd+WDtB9VB365VO8ZljSM3K5esPllRlydHqUnP3nH32WY28DDb5yYszgUGhFGYiByeuzPv\n83lMWziNaQun0apFK8ZljeOVG17hjD5n6PRKqVXYY/rfAl4PeZ8iEufuzC+bXx30jjMuaxwvjHuB\nYX2HKeilXqGFvpldBNwCjD5cu7y8vOr5WCxGLBYLqwSRZsndWbB+Ac8tfI5pC6dRXlnOuKxxTLtu\nGl/q9yUFfTNUWFhIYWFho+w7qSty48M7r9Q2ph/fng08D4xx978fZj8a0xdJ0sL1C4Me/aJp7Crf\nRe7pueRm5TKi/wgFfYaJ4opci0+1FXM8QeDfdLjAF5H6lWwoqQ76bXu3kXt6Lr+/6veMHDBSQS+h\nSObsnaeBGNATKAMmAW0Ad/epZvY4cA3wGcEHQ7m7j6xjX+rpi9SwdNPS6jH6Tbs3cd3p15Gblcuo\nY0fpoSIC6IZrImlv2eZl1UFftrOsOujPPe5cBb0cQqEvkoaWb1leHfRrtq/h66d9ndysXEYfP5qW\nLVpGXZ6kMIW+SJpwd15e8jL5s/NZsWUF1552LblZuVww8AIFvSRNt1YWSXHuzpt/f5MJ0ydQXlFO\nXiyPK4ZcoefCSuT0GygSshmfzmDC9Als3LWRybHJXHv6tRqnl5Sh0BcJydzVc5k4fSLLtywn78I8\nbhx6o4ZwJOUo9EWO0rx187iv8D7mfz6fiRdM5BtnfoPWLVtHXZZIrRT6Ikdo0YZFTCqcxJyVc7h3\n9L38+brg7pYiqUyhL9JAyzYv4/4Z9/PGsje469y7+MPX/kCH1h2iLkskKTq6JJKklV+s5NaXb2XU\n70YxpMcQln1/GXedd5cCX9KKevoi9Vi3fR35s/J5esHT3D78dpaOX0qP9j2iLkvkiCj0ReqwYecG\nHp7zME/Me4JbzryFku+V0Kdjn6jLEjkqCn2RGrbu2crP3/k5j33wGNdnXc8n3/mEAV30QDhpHhT6\nInHb927nl+/9kkfmPsJVp1zFh9/+kBO6nRB1WSKhUuhLxttVvovHih7j39/5dy4ZdAnvfPMdhvQc\nEnVZIo1CoS8Za+/+vTz+0ePkz8rnnOPO4a2b3+KMPmdEXZZIo1LoS8YpryjnD/P/wAMzH+CMPmfw\nyg2vMLz/8KjLEmkSCn3JGBWVFTyz4BnyCvMY2G0gz1z7DOced27UZYk0KYW+NHuVXskLJS9w3/T7\n6N6+O4//w+NcdOJFUZclEgmFvjRb7k5BaQETp0+khbXg51/9OWNOHqMHjEtGqzf0zewJ4AqgzN2z\n62jzKHAZsBP4hrt/HGqVIg3g7ry14i0mvD2BHft28MBFD/C1U7+msBchuZ7+U8CvgD/WttHMLgNO\ncvfBZnY28FtgVHgliiRv9srZTHh7Amu3r+X+2P3kZuXqnvYiCeoNfXefbWYDD9PkKuIfCO7+npl1\nNbO+7l4WVpEi9SlaU8TE6RNZvHExky6cxE3DbtKjCUVqEcb/igHAqoTlNfF1Cn1pdMVlxdw3/T4+\nWPsBPzn/J7x8w8u0adkm6rJEUlaTd4Xy8vKq52OxGLFYrKlLkGZg8cbF5BXmUfhpIXefdzfPXPsM\n7Vu3j7oskVAUFhZSWFjYKPs2d6+/UTC880ptB3LN7LfAdHd/Lr68GLiwtuEdM/NkXk+kLsu3LGfy\njMkUlBbwg1E/YPzZ4+nUplPUZYk0KjPD3UM5EyHZh6hYfKrNy8DN8cJGAVs1ni9hW71tNbe/ejs5\nj+cwsOtAlo1fxr3n36vAF2mgZE7ZfBqIAT3NbCUwCWgDuLtPdffXzOxyM1tGcMrmLY1ZsGSWlV+s\nZMrsKTy74FluPetWltyxhF4dekVdlkjaSmp4J7QX0/COJOnTrZ/y01k/5c+L/sytZ93Kv537b3qA\niWSsMId3dE6bpJTlW5aTPyufFxe/yG3Db2Pp+KXq2YuESKEvKWHZ5mU8NOshXlnyCt/N+S6l40v1\nHFqRRqDQl0gt2biEh2Y9xGulrzF+5HhKx5fSvX33qMsSabY0pi+RKNlQwoOzHuTNv7/JnWffyfiR\n4+narmvUZYmkpDDH9BX60qQWrF/AgzMf5O0Vb/Ovo/6V7438Hl3adom6LJGUpgO5knaKy4qZPGMy\ns1fO5gfn/IDfXfk7nWMvEgGFvjSqeevmMXnmZOaunstd597FH772Bzq26Rh1WSIZS6EvjeKDtR8w\necZkPlz3IT8690f8zzX/Q4fWHaIuSyTjKfQlVO+tfo/JMycz//P53DP6Hp77+nO6EZpIClHoSyje\nWfUOk2dMZtGGRdw7+l5eyH2Btq3aRl2WiNSg0JejMuuzWdw/436WbV7Gj8//se5nL5LiFPpyRAo/\nLeT+Gffz2dbP+Mn5P+HmYTfTumXrqMsSkXoo9CVp7s7bK95m8szJrN2+lgnnT+DGoTcq7EXSiEJf\n6uXu/N/y/+P+GfezadcmJlwwgevPuF7PoBVJQ/pfK3Vyd15f9jqTZ0xm295tTLxgIrlZubRs0TLq\n0kTkCCn05RDuzqtLX2XyzMns2b+HiRdM5NrTrlXYizQDCn2p5u68tOQlJs+YTIVXcN8F93H1aVfT\nwpJ9qqaIpDqFvlDplbxY8iIPzHyAFtaC+y68jytPuVJhL9IMKfQzWEVlBc+XPM8DMx+gXat2PPjl\nBxk7eCxmodzMT0RSUFKhb2ZjgEeAFsAT7v6zGtt7An8CjgFaAj9399+HW6qEpaKygmkLp/HAzAfo\n0rYLD1/yMGNOHqOwF8kA9d5P38xaAEuBi4G1QBFwvbsvTmgzCWjn7veaWS9gCdDX3ffX2Jfupx+h\n/ZX7eeaTZ3hw1oP06tCLSRdO4iuDvqKwF0lxTX0//ZFAqbt/Fn/xZ4GrgMUJbT4HhsbnOwObaga+\nRKe8opw/Ff+J/Nn5HNPpGB67/DG+fOKXFfYiGSiZ0B8ArEpYXk3wQZDoceAtM1sLdALGhVOeHI3d\n5bt5ct6TPPzOwwzuMZjH/+FxYifEoi5LRCIU1oHce4H57n6RmZ0E/J+ZZbv7jpoN8/LyqudjsRix\nWCykEqTKtr3b+O0Hv+U/5/4nIweMZNrXp3H2sWdHXZaIJKmwsJDCwsJG2XcyY/qjgDx3HxNfvgfw\nxIO5ZvYa8JC7z4kvvwXc7e4f1NiXxvQb0aZdm3j0vUd57IPH+Mqgr3Dv6HsZ2ndo/d8oIimtqcf0\ni4CTzWwgsA64HrihRpsS4BJgjpn1BYYAy8MoUOq3dvtafvHuL3hy3pNce9q1vPvNdzm5x8lRlyUi\nKaje0Hf3CjO7A3iTA6dslpjZbcFmnwr8FHjKzOYDBvzI3Tc3ZuECK7as4OE5D/Pcwue4edjNFH+n\nmGO7HBt1WSKSwuod3gn1xTS8E4pFGxYxZfYUCkoLuH347dw56k76dOwTdVki0kjCHN5R6KeRD9d+\nSP7sfGavnM2dZ9/Jd3O+S7d23aIuS0QamUI/w8z8bCb5s/JZuGEhPzznh3zrrG/RsU3HqMsSkSbS\n1AdyJQLuzl+X/ZX82fms276Oe0bfw0vZL+lh4yJyVBT6KaaisoIXF79I/qx8yivL+fHoH3Nd1nV6\nSpWIhEJJkiLKK8p5+pOnmTJnCl3adiEvlscVQ67Q7Y1FJFQK/YjtLt/NUx8/xcNzHmZQ90H8+rJf\n6744ItJoFPoR2b53e/WtEob3H84z1z7DOcedE3VZItLMKfSb2KZdm/jV+7/iv4r+i4tPvJjX//F1\nhvUbFnVZIpIhFPpNZN32dfzi3V/wxLwnuPrUq5nzL3MY0nNI1GWJSIZR6DeyT7d+ysNzHubZBc/y\nT9n/xMe3f8zxXY+PuiwRyVAK/UZSsqGEKXOm8OrSV/n2Wd+m5Hsl9O3UN+qyRCTDKfRD9tG6j8if\nlc/Mz2by/bO/z7Lxy+jevnvUZYmIALoNQ2hmfTaL/Nn5FJcV88Nzfsitw2+lU5tOUZclIs2AbsOQ\nItydN/7+Bvmz8lmzfQ13n3c3/zvuf3WrBBFJWQr9I1DplbxY8iL5s/PZs38PPx79Y8adMU63ShCR\nlKeUaoDyinKeWfAMU2ZPoWObjky8YCJXnnKlbpUgImlDoV8Pd+eT9Z9QsLSAqR9NZWDXgfxyzC+5\nZNAlulWCiKQdHcitxc59O3l7xdsUlBbwWulrtGrRirGDx3LD0Bs497hzoy5PRDKMHqLSCJZvWU7B\n0gIKSguYs2oOI/qPYOzgsYwdPJZTe52qXr2IRKbJQ9/MxgCPcODB6D+rpU0M+E+gNbDB3S+qpU3K\nhH55RTmzV86moDQI+s27N3P54Mu5/OTL+epJX6Vru65RlygiAjRx6JtZC2ApcDGwFigCrnf3xQlt\nugLvAF919zVm1svdN9ayr0hDv2xHGa8ve52C0gL+tvxvnNzj5Ore/PD+w3VAVkRSUlOfpz8SKHX3\nz+Iv/ixwFbA4oc2NwPPuvgagtsCPQqVX8tG6j6qHbZZuWsolgy5h7OCx/OqyX9GvU7+oSxQRaVLJ\nhP4AYFXC8mqCD4JEQ4DWZjYd6AQ86u7/HU6JDbNt7zbe/PubFJQW8Hrp63Rr142xg8cy5ZIpjD5+\nNG1atomiLBGRlBDWKZutgLOALwMdgXfN7F13X1azYV5eXvV8LBYjFosd1Qu7O0s2LanuzRetLeK8\n485j7OCxTDh/Aif1OOmo9i8i0tQKCwspLCxslH0nM6Y/Cshz9zHx5XsATzyYa2Z3A+3c/f748u+A\n1939+Rr7CmVMf8/+Pcz4dEb1Qdi9+/cGY/NDxnLxiRfTsU3Ho34NEZFU0dRj+kXAyWY2EFgHXA/c\nUKPNS8CvzKwl0BY4G/hFGAVWWb1tNa+VvkZBaQHTV0xnaN+hjB08lhdyXyC7b7ZOqRQRSUK9oe/u\nFWZ2B/AmB07ZLDGz24LNPtXdF5vZG0AxUAFMdfdFR1NYRWUFc1fPre7Nr962mktPupTc03N58son\n6dmh59HsXkQkI6XUxVmbd2/mr8v+SkFpAW8se4MBXQZUn1J59rFn64ZmIpKRms0VuYn3tSkoLaC4\nrJjYCTHGDh7L5YMv57iuxzVZbSIiqSqtQ3/H3h3V97UpKC2gdYvW1QdhYyfEaNeqXZPVIyKSDtI6\n9Dvnd2ZE/xFcPvhy3ddGRCQJaR36W3dv1X1tREQaIK1DP1VuuCYiki7CDH3dYUxEJIMo9EVEMohC\nX0Qkgyj0RUQyiEJfRCSDKPRFRDKIQl9EJIMo9EVEMohCX0Qkgyj0RUQyiEJfRCSDKPRFRDKIQl9E\nJIMo9EVEMkhSoW9mY8xssZktNbO7D9Mux8zKzeya8EoUEZGw1Bv6ZtYC+DVwKZAF3GBmp9bRbgrw\nRthFiohIOJLp6Y8ESt39M3cvB54Frqql3XjgL8D6EOsTEZEQJRP6A4BVCcur4+uqmVl/4Gvu/htA\nD7wVEUlRrULazyNA4lh/ncGfl5dXPR+LxYjFYiGVICLSPBQWFlJYWNgo+673GblmNgrIc/cx8eV7\nAHf3nyW0WV41C/QCdgLfdveXa+xLz8gVEWmgJn0wupm1BJYAFwPrgPeBG9y9pI72TwGvuPsLtWxT\n6IuINFCYoV/v8I67V5jZHcCbBMcAnnD3EjO7LdjsU2t+SxiFiYhI+Ort6Yf6Yurpi4g0WJg9fV2R\nKyKSQRT6IiIZRKEvIpJBwjpPX0REQlJZCdu2wZYtsHlzuPtW6IuINJK9ew8Ed9XXZOa3boUOHaBH\nD+jePdyadPaOiMhhuAe97oYG9+bNsG9fENxV4Z3sfLdu0Lr1gRqa9OKsMCn0RSQq+/YdWXDX7HU3\nJMQ7dgQLIaoV+iKS0crLYdMm2Lix7mnDhgPzmzYFQy01gzmZ4K7Z646CQl9Emo3KyqA3XV9wJ047\ndgSB3KvXoVPv3oeu69kTOnUKp9cdBYW+iKQkd9i5M7ngrtq2eTN07px8gPfqFfS+W2TQCecKfRFp\nEvv3B8G8fn1ywygbN0LLlrUH9eF64VEPn6Q6hb6IHLEdO4IQX78eysoO/3Xr1iCUe/c+NLDr6oV3\n6BD1T9j8KPRFpFplZXCgsrbQrm1dZSX07Qt9+hz4mjif+LVnz6DnLtFS6Is0c3v21N8br5rftAm6\ndDl8eCduS+cDmplKoS+SZtyDoZJke+O7dx8a4nUFeq9e0KZN1D+hNCaFvkhEal5WX/MS+5rrEufb\nt0++N96tm3rjcoBCX+Qo7N8f9LobGtqbNwcXBVVdvJN4gU9d84nr2rWL+ieXdKXQl4xXdT+Uhob2\nli3BeeRdutQf0rXNh3VZvUhDNHnom9kY4BEOPCP3ZzW23wjcHV/cDnzH3T+pZT8KfQGCHvMXXzRs\nqgrxLVsO3A+lIYFdNd+lS2Zd2CPpr0lD38xaAEuBi4G1QBFwvbsvTmgzCihx9y/iHxB57j6qln0p\n9JuBhgT21q21r9+3D7p2bdhUFdzdu6fG/VBEmkqYoZ/M/fRHAqXu/ln8xZ8FrgKqQ9/d5ya0nwsM\nCKM4Cd++fQ3vYdecysuD3vLhArpvXzjllLq3d+igYRKRKCQT+gOAVQnLqwk+COryLeD1oylKDq+8\nvP6x7NrWbd0aHMSsr0d9zDFw6qkKbJHmKNQnZ5nZRcAtwOgw99scVVQcPE7dkADfuzcY3qjtFrHd\nu8PAgfClLx06nt2tW3DaoAJbJHMlE/prgOMTlo+NrzuImWUDU4Ex7r6lrp3l5eVVz8diMWKxWJKl\nph734D4mRxLc27cHV0bWdQZJ794wZEjtwa4rKkWat8LCQgoLCxtl38kcyG0JLCE4kLsOeB+4wd1L\nEtocD7wF3FRjfL/mvlL2QK57EMRVdxTcsOHQaePGQ8O8TZv6zyCpbV23brqniYgkp0kP5Lp7hZnd\nAbzJgVM2S8zstmCzTwUmAj2Ax8zMgHJ3P9y4f6NzD4ZPEkO7tjBPXNe69YG7CfbuHVwd2bs39OsH\nQ4cGN59KfLJO9+7Qtm2UP6WISMOkzcVZVU/XOVxoJ67buDG4AjIxxBODvLZ17duH/AOLiISgWVyR\nW1kZDI8k0wOvGlrp2PHQwK4ryHv31mXvItI8pHXoZ2V59SPSOnU6fM87cerVS0MpIpKZ0jr058/3\n6hDXFZWS9ioqgnNoa0579hy8vG9f0N7swFRzueZ0tNvDfI0WLQ5MLVse/LW2dS1bHrwPOSpNfUVu\nqLKzm/oVpVnZv7/2kK0taOubGtK+rraVlcGfoDWndu0OXq664b17MCXO1zYd7fawX6OyMvhaURHM\n1/xa2zr3IPST+ZBo7HW1fQDV9oEU5rqw9x+SJg99SUGVlUFPtL6pvDy5do31/Xv3BvXWFrJ1he3h\nps6dk29b135btVJvti5VHxb1fTg01bqatdVWb1jrwt7Xn/50aLsjlDZn7zQ7lZUHepBVvcijna9v\ne11hWlFxoDeaOLVufei6hkxhf39VyIpkmLQe3klZlZXBjda3bw+mHTsOzFct79oVXkiXlwe9x6oe\nZOLXhsx37Zpc+8RhhppT1Z+/ItLspW9Pv7Ly4GCuLaQbsrxrV3Ansc6dg9OKOnc+MFUtd+hwIEyP\nNKSr5lu3VtCKSFLS+uwdX7UqnJDevTs4cb9mMB/pcseOerKGiKSk9A79/v3DCeoOHRTSIpIR0jv0\ndSBXRKRBwgx9dZVFRDKIQl9EJIMo9EVEMohCX0Qkgyj0RUQyiEJfRCSDKPRFRDKIQl9EJIMkFfpm\nNsbMFpvZUjO7u442j5pZqZl9bGZnhlumiIiEod7QN7MWwK+BS4Es4AYzO7VGm8uAk9x9MHAb8NtG\nqDVyhYWFUZdwVFR/tNK5/nSuHdK//jAl09MfCZS6+2fuXg48C1xVo81VwB8B3P09oKuZ9Q210hSQ\n7r84qj9a6Vx/OtcO6V9/mJIJ/QHAqoTl1fF1h2uzppY2IiISMR3IFRHJIPXeZdPMRgF57j4mvnwP\n4O7+s4Q2vwWmu/tz8eXFwIXuXlZjX7rFpojIEWjKxyUWASeb2UBgHXA9cEONNi8D3wOei39IbK0Z\n+BBe0SIicmTqDX13rzCzO4A3CYaDnnD3EjO7LdjsU939NTO73MyWATuBWxq3bBERORJN+hAVERGJ\n1lEfyDWzJ8yszMyKE9Zlm9k7ZjbfzF4ys07x9QPNbJeZfRSfHkv4nrPMrDh+AdgjR1tX2LXX2LYg\nvr1NVLU3tH4zu9HM5sXf93lmVmFm2fFtw9Og/rZm9nS8zoXxY0tV35MO739rM3syXuc8M7swyvrN\n7FgzeztOEwXLAAAEc0lEQVT+Xn5iZt+Pr+9uZm+a2RIze8PMuiZ8z73xCzBLzOyr6VS/mfWIt99u\nZo/W2Fc61H+JmX0Q/70qMrOLjrh+dz+qCRgNnAkUJ6x7Hxgdn/8GMDk+PzCxXY39vAfkxOdfAy49\n2tpCrr0lMB84I77cnQN/KTV57Q2tv8b3nUFw7UVk7/0RvP//DDwdn28PrACOT6P6v0swNArQG/gg\nyvcf6AecGZ/vBCwBTgV+Bvwovv5uYEp8/nRgHsGQ8AnAsih//4+g/g7AucC3gUdr7Csd6h8G9IvP\nZwGrj7T+sH6Ag8Ic2JIwfyywMKHdJ3W8AYsSlq8HftPYb3wDa78M+GMq1d6Q+mt8z0PAA+lUP8EV\n4S8RfPj2BBYD3dKg/gXx+V8D/5iw7W/AiKjrT3jd/wUuib+vfRN+NxbH5+8B7k5o/zpwdrrUn9Du\nn0kI/XSrP6H9RqD1kdTfWOfpLzSzK+PzuQS//FVOiA8xTDez0fF1Awgu+qpS2wVgTaWu2ocAmNlf\n439m3RVfn0q1w+Hf+yrjgGfi82lRv7u/AWwjOIPsU+A/3H0rqV//cfH5+cCVZtbSzE4Ehse3RV6/\nmZ1A8BfLXILAKQNw98+BPvFmdV2AmS711yXt6jezrwMfeXCHhAbX31ih/y/A98ysCOgI7IuvX0fw\nJ/lZwL8BT1vCmHmKqKv2VsB5BKerng9cnTiulkLqqh8AMxsJ7HT3RVEUl4Ra6zezfyIY1ukHDAJ+\nGP/Pkmrqev+fJAjKIuAXwBygIpIKE8T///0FuNPddwA1z+xI6TM9Mq1+M8sCfkowTHVEkjlPv8Hc\nfSnBn+OY2WBgbHz9PuL/Cdz9IzP7O0EPeg0HekQQ9O7WNEZt9amrdoJP0JnuviW+7TXgLOB/SJHa\n4bD1V7meA718SKH3Hg5b/7nAi+5eCWwwszkEwyOzSYP63b0C+EFVu3j9S4GtRFS/mbUiCJz/dveX\n4qvLzKyvu5eZWT9gfXx9Xb8nkf3+NLD+uqRN/WZ2LPACcJO7fxpf3eD6w+rpW3yqKq53/GsLYALx\nu26aWa/4OsxsEHAysDz+Z8wXZjbSzAy4mWD8tikkVTvwBjDUzNrF/7EuJBhvjrL2htRPvL5cgpvm\nAdV/QqZy/b+Jb1oMXBzf1hEYBZSkQf1Vv/vtzaxDfP4rQLm7L464/icJxoN/mbDuZYID0BCMf7+U\nsP56M2sTH546GXg/jepPVP3vlS71m1k34FWC4ypzqxofUf0hHIB4GlgL7AVWElyY9X2Co9GLgfyE\nttcAC4CPgA+AyxO2DQc+AUqBXzbRwZOka4+3vzFefzHw0yhrP8L6LwTeqWU/KV8/0Bb4U7zOBcAP\n0qz+gfF1CwkudDwu4t/98wiGlz4mOCvnI2AM0IPgIPOSeJ3dEr7nXoKzdkqAr6Zh/SsIDoBui/97\nnZou9QM/AbbH21W173Uk9eviLBGRDKK7bIqIZBCFvohIBlHoi4hkEIW+iEgGUeiLiGQQhb6ISAZR\n6IuIZBCFvohIBvl/6MgeC0VIfI8AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1070e5d50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.scatter(data.x, data.y)"
+    "plt.plot(data.year, data.pop_usa)\n",
+    "plt.plot(data.year, data.pop_china)\n",
+    "plt.plot(data.year, data.pop_russia)\n"
    ]
   },
   {
@@ -176,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
