Add mention of plotting notebook in Going Further text

--- a/sample-notebooks/welcome.ipynb
+++ b/sample-notebooks/welcome.ipynb
@@ -181,7 +181,7 @@
     "\n",
     "## Going further\n",
     "\n",
-    "Once you're ready for something more sophisticated, open the menu in the upper left corner and try out the earthquake or Monte Carlo notebooks.\n",
+    "Once you're ready for something more sophisticated, open the menu in the upper left corner and try out the earthquake,  Monte Carlo, or plotting notebooks.\n",
     "\n",
     "[More information and full sourcecode available here.](https://github.com/inkandswitch/livebook)\n",
     "\n",
