--- a/sample-notebooks/video-stages/iris_data_2.ipynb
+++ b/sample-notebooks/video-stages/iris_data_2.ipynb
@@ -25,19 +25,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "iris_data = pd.read_csv('iris_data.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -122,10 +125,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "iris_data = pd.read_csv('iris_data.csv')\n",
     "iris_data.head()"
    ]
   },
@@ -438,8 +437,8 @@
     }
    ],
    "source": [
-    "iris_data.dropna(inplace=True)\n",
-    "iris_data.describe()"
+    "iris = iris_data.dropna()\n",
+    "iris.describe()"
    ]
   },
   {
