Video stages notebooks - fixed

--- a/sample-notebooks/video-stages/iris_data_2.ipynb
+++ b/sample-notebooks/video-stages/iris_data_2.ipynb
@@ -437,8 +437,8 @@
     }
    ],
    "source": [
-    "iris = iris_data.dropna()\n",
-    "iris.describe()"
+    "iris_data.dropna(inplace=True)\n",
+    "iris_data.describe()"
    ]
   },
   {
